Corrected scrollbar position in motif list

--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -674,7 +674,7 @@ body {
 
 .suggestions {
   z-index: 11;
-  width: 36.5rem;
+  width: 37.3rem; /*36.5*/
   margin-left: -0.2rem;
   margin-top: 0.5rem;
   background-color: #f1f1f1;
@@ -690,7 +690,7 @@ body {
 }
 
 #motif-list {
-  max-height: 25.42rem;
+  max-height: 24.42rem;
   overflow-y: scroll;
   /*-ms-overflow-style: none;
   scrollbar-width: none;
@@ -755,7 +755,7 @@ body {
 }
 
 .motif-gene {
-  width: 6rem;
+  width: 6rem; /* 7rem*/
 }
 
 .motif-gene.subfamily-shown {
